Only retry db fails if it's due to the db being locked

BUG: 500697